# rascal

./: .gitignore  CMakeLists.txt  README.md
include/: grammar.h  lexer.h  parse_tree.h  result.h  token.h  visitor.h
src/: grammar.cpp  lexer.cpp  main.cpp  result.cpp  token.cpp
tests/: grammar_test.cpp  lexer_test.cpp
tests/test_configs/: valid1.yaml
